--- a/.github/workflows/jin-cd.yml
+++ b/.github/workflows/jin-cd.yml
@@ -1,8 +1,8 @@
-name: earth-github-action-test CD
+name: github-action-test
 
 on:
   push:
-    branches: [ develop ] # develop에 push될 때 CD가 일어나도록 핸들링
+    branches: [ main ] # develop에 push될 때 CD가 일어나도록 핸들링
 
 jobs:
   build:
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1 # 최신 버전을 쓰고 싶었으나 이슈가 생겨서 기존에 CI에서 쓰던 버전 사용
         with:
-          java-version: 11
+          java-version: 17
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -48,8 +48,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }} # github secrets로 등록한 값 사용
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # github secrets로 등록한 값 사용
-          application-name: earth-github-action-test # EB application 이름
-          environment_name: dev-earth-github-action-test # EB environment 이름
+          application-name: github-action-test # EB application 이름
+          environment_name: Github-action-test-env # EB environment 이름
           version_label: Github Action-${{steps.current-time.outputs.formattedTime}} # 배포 버전은 타임스탬프를 이용하여 구분
           region: ap-northeast-2
           deployment_package: deploy/deploy.zip
